--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
     "chartjs": "^0.3.24",
+    "firebase": "^10.12.3",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
